can-socket/tests/compile-fail/can_id_too_high3.rs
fn main() {
	let _id = can_socket::id!(extended: 0x2000_0000);
}
